Minor design change.

--- a/styles/ralf_style.css
+++ b/styles/ralf_style.css
@@ -61,12 +61,12 @@ p.small {
   line-height: 17px;
 }
 
-li,dt { 
+dt { 
   margin-top: 1px; 
   margin-bottom: 1px;
 }
 
-dd {
+li,dd {
   margin-top: 1px;
   margin-bottom: 12px;
 }
